# QUICKMUNCH

./: account.db  account.sqlite  db.txt  frontpage.css  frontpage.html  index.html  login.html  main.py  menu.css  menu.html  pyproject.toml  register.css  register.html  replit.nix  restaurants.sqlite  style.css
static/: basket.css  frontpage.css  frontpage.js  menu.css  password.css  register.css  script.js  style.css
templates/: basket.html  checkout.html  frontpage.html  index.html  login.html  menu.html  register.html
